--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "marker-clusterer": "^1.0.2",
+    "marker-clusterer-plus": "^2.1.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
