--- a/package.json
+++ b/package.json
@@ -47,7 +47,14 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "history": "^5.3.0",
+    "jest": "^27.5.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/node/axios.cjs"
+    }
   }
 }
